made some adjustment in codes

--- a/Html Css/4/4.html
+++ b/Html Css/4/4.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Attribute Selectors</title>
-    <link rel="stylesheet" href="link.css">
 </head>
 <body>
-
-    <p><a href="https://example.com">External link</a></p>
-    <p><a href="#section1">Internal link</a></p>
-    <p><a href="#" class="parent">Parent link</a></p>
-    <p><a href="#" id="topLink">Top link</a></p>
-    <p><a href="#" class="highlighted">Highlighted link</a></p>
-
+    <p><a href="#" style="color: blue;">External link</a></p>
+    <p><a href="#" style="color: green;">Internal link</a></p>
+    <p><a href="#" class="parent" style="font-weight: bold;">Parent link</a></p>
+    <p><a href="#" id="topLink" style="text-decoration: underline;">Top link</a></p>
+    <p><a href="#" class="highlighted" style="background-color: yellow; font-weight: bold;">Highlighted link</a></p>
 </body>
 </html>
