--- a/Html Css/9.html
+++ b/Html Css/9.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
         header{
-            background-color:  rgb(233, 230, 230);;
+            background-color:  rgb(233, 230, 230);
             text-align: center;
             font-size: 35px;
             padding: 20px;
