--- a/Html Css/1.html
+++ b/Html Css/1.html
@@ -5,60 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-       .table1{
-        border-style: solid;
-        border-width: 2px;
-        border-color: black;
-        padding: 20px;
-       }
-       .table2{
-        border-style: solid;
-        border-width: 8px;
-        border-color: black;
-        padding: 35px;
-       }
-       .table3{
-        border-style: dotted;
-        border-width: 3px;
-        border-color: blue;
-        padding: 35px;
-       }
-       .table4{
-        border-style:solid ;
-        border-width: 2px;
-        border-color: red;
-        padding: 30px;
-       }
+        .root {
+            width: 320px;
+        }
+        .margin {
+            border: 2px solid black;
+        }
+        .border {
+            border: 8px solid black;
+            margin: 40px;
+        }
+        .padding {
+            margin: 30px;
+            border: dotted blue 4px;
+            padding: 20px;
+        }
+        .content {
+            text-align: center;
+            border: 2px solid red;
+            padding-left: 10px;
+            padding-right: 10px;
+            padding-bottom: 50px;
+        }
     </style>
 </head>
 <body>
-    <table class="table1">
-        <tr>
-            <td>
-                <p>Margin</p>
-                <table class="table2">
-                    <tr>
-                        <td>
-                            <p>Border</p>
-                            <table class="table3">
-                                <tr>
-                                    <td>
-                                        <p>padding</p>
-                                        <table class="table4">
-                                            <tr>
-                                                <td>
-                                                    <p>Content</p>
-                                                </td>
-                                            </tr>
-                                        </table>
-                                    </td>
-                                </tr>
-                            </table>
-                        </td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
-    </table>
+    <div class="root">
+        <div class="margin">Margin
+            <div class="border">Border
+                <div class="padding">Padding
+                    <div class="content">Content</div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
