--- a/java_Script/1.html
+++ b/java_Script/1.html
@@ -7,23 +7,10 @@
 </head>
 <body>
     <script>
-         function reversedString(str) {
-                  let reversedString = '';
-                  for (let i = str.length - 1; i >= 0; i--) {
-                  reversedString += str[i];
-            }
-            return reversedString;
-        }
-        let userInput=prompt("Enter a string :");
-        if(userInput!=null)
-        {
-            let reverseString=reversedString(userInput);
-            document.write(reverseString);
-        }
-        else{
-                document.write("no input provided");
-        }
+    let userInput = prompt("Enter a string:");
+let revString = userInput.split("").reverse().join("");
 
+document.write("Reversed string: " + revString);
     </script>
 </body>
 </html>
