--- a/java_Script/4.html
+++ b/java_Script/4.html
@@ -3,34 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>String Comparison</title>
 </head>
 <body>
+    <div id="output"></div> <!-- Added an element to display output -->
     <script>
-        var string1=prompt("Enter a string :");
-        var string2=prompt("Enter a string :");
+        let str1 = prompt("Provide any string:");
+        let str2 = prompt("Provide another string:");
+        let output = document.getElementById("output");
 
-        if(string1 && string2 !=null)
-        {
-            compareString(string1,string2);
-        }
-        else{
-            console.log("Enter the valid string");
-        }
-
-        function compareString(str1,str2)
-        {
-            if(str1==str2)
-            {
-                console.log("string are equal.");
-                if(str1 && str2.toUpperCase()){
-                    document.write("First string is in uppperCase.")
-                }
-            }
-            else{
-                document.write("String are not equal.");
+        function compareStrings() {
+            if (str1 === null || str2 === null) {
+                output.innerText = "Please provide both strings";
+            } else if (str1.toUpperCase() === str2.toUpperCase()) {
+                output.innerText = "The first string is in uppercase";
+            } else {
+                output.innerText = "The strings are not equal";
             }
         }
+
+        compareStrings(); // Calling the function to perform comparison
     </script>
 </body>
 </html>
